# SudokuSolver

./: CMakeLists.txt  README.md  common.cmake
modules/cli/: CMakeLists.txt  main.cpp
modules/core/: CMakeLists.txt
modules/core/include/sudokusolver/: board.hpp  board_observer.hpp  cell.hpp  cell_observer.hpp  observable.hpp  solver.hpp
modules/core/include/sudokusolver/core/: board.hpp  board_observer.hpp  cell.hpp  cell_observer.hpp  solver.hpp
modules/core/src/: board.cpp  board_observer.cpp  cell.cpp  solver.cpp
modules/gui/: AboutDialog.qml  Board.qml  CMakeLists.txt  Cell.qml  gui.qrc  main.cpp  main.qml
modules/qml/: CMakeLists.txt
modules/qml/include/sudokusolver/qml/: board.hpp  cell.hpp  plugin.hpp
modules/qml/src/: board.cpp  cell.cpp  plugin.cpp
